# finite-state-machine

./: Makefile  pyproject.toml
fsm/conversation/: api.py  conversation_machine.py
fsm/traffic_light/: api.py  traffic_light.py
