[tool.poetry]
name = "finite-state-machine"
version = "0.1.0"
description = ""
authors = ["ro-anderson <didier.rda@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-statemachine = "^2.5.0"
pydot = "^3.0.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
